--- a/styles/p3styles.css
+++ b/styles/p3styles.css
@@ -26,7 +26,7 @@ button {
 
 /* body styling */
 body {
-    background: url('/images/background.jpeg') center center fixed;
+    background: url('images/background.jpeg') center center fixed;
     background-size: cover;
     flex: auto
 }
